# backuppy

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  backuppy.conf  mypy.ini  pyproject.toml  requirements-dev-minimal.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  tox.ini
backuppy/: args.py  backup.py  blob.py  config.py  crypto.py  exceptions.py  io.py  manifest.py  options.py  run.py  util.py
backuppy/cli/: backup.py  get.py  list.py  put.py  restore.py  verify.py
backuppy/stores/: __init__.py  backup_store.py  local_backup_store.py  s3_backup_store.py
docs/: principles.md  pseudocode.md
e2e/: e2e.conf  e2e.pem  e2e.sh
e2e/data/: foo_copy  new_file
e2e/data/baz/: fizz
itests/: Dockerfile  backup_restore_test.py  backup_test.py  blob_test.py  conftest.py  file_guarantees_test.py  itest.conf  itest.pem  manifest_guarantees_test.py  shutdown_test.py  verify_test.py
systemd/system/: backuppy.service  backuppy.timer
tests/: backup_test.py  blob_test.py  conftest.py  crypto_test.py  io_test.py  manifest_test.py  util_test.py
tests/cli/: backup_test.py  conftest.py  get_test.py  list_test.py  put_test.py  restore_test.py  verify_test.py
tests/stores/: backup_store_test.py  conftest.py  local_backup_store_test.py  s3_backup_store_test.py
