[tool.poetry]
name = "backuppy"
version = "1.1.1"
description = "Versioned backup software in Python"
authors = ["David Morrison <drmorr@evokewonder.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.23"
bsdiff4 = "^1.2.3"
colorama = "^0.4.6"
colorlog = "^6.7.0"
cryptography = "^41.0.3"
dateparser = "^1.1.8"
iteration-utilities = "^0.11.0"
mypy-extensions = "^1.0.0"
PyYAML = "^6.0.1"
PyStaticConfiguration = "^0.11.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
atomicwrites = "^1.4.1"
behave = "^1.2.6"
coverage = "^7.2.7"
flake8 = "^6.1.0"
mock = "^5.1.0"
moto = "^4.1.14"
mypy = "^1.5.0"
pyfakefs = "^5.2.3"
pyhamcrest = "^2.0.4"
pytest = "^7.4.0"
types-dateparser = "^1.1.4.10"
types-tabulate = "^0.9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
