[tool.poetry]
name = "backuppy"
version = "1.1.2"
description = "Versioned backup software in Python"
authors = ["David Morrison <drmorr@evokewonder.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "*"
bsdiff4 = "*"
colorama = "*"
colorlog = "*"
cryptography = "*"
dateparser = "*"
iteration-utilities = "*"
mypy-extensions = "*"
PyYAML = "*"
PyStaticConfiguration = "*"
tabulate = "*"

[tool.poetry.group.dev.dependencies]
atomicwrites = "*"
behave = "*"
coverage = "*"
flake8 = "*"
mock = "*"
moto = { version = "*", extras = ["s3"] }
mypy = "*"
pyhamcrest = "*"
pytest = "*"
types-dateparser = "*"
types-tabulate = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
force-single-line = true
